--- a/WebCode/Web.AppSetting.config
+++ b/WebCode/Web.AppSetting.config
@@ -15,4 +15,7 @@
   <add key="Email.SmtpPassword" value="test123_"/>
   <add key="Email.SmtpSsl" value="false"/>
   <add key="Email.SmtpPort" value="587"/>
-</appSettings>
+
+  <add key="vs:EnableBrowserLink" value="false" />
+
+  </appSettings>
