--- a/Web4/packages.config
+++ b/Web4/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net46" />
@@ -28,6 +29,7 @@
   <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta8" targetFramework="net46" />
   <package id="Microsoft.Framework.Primitives" version="1.0.0-beta8" targetFramework="net46" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Remotion.Linq" version="2.0.0-beta-002" targetFramework="net46" />
   <package id="System.Collections" version="4.0.0" targetFramework="net46" />
