--- a/WebCode/Web.config
+++ b/WebCode/Web.config
@@ -9,32 +9,26 @@
   <system.webServer>
     <rewrite>
       <rules>
-        <rule name="Preserve" stopProcessing="true">
-          <match url="^(code/newea\.aspx|links\.aspx|vyzva57services/(.*)|service\.ashx)$" />
+        <!-- stranky na WebCode serveru -->
+        <rule name="Preserve" stopProcessing="true"> 
+          <match url="^(code/newea\.aspx|links\.aspx|vyzva57services/(.*)|service\.ashx|mp3Uploader\.ashx|.*\.cshtml|links\.html)$" />
           <action type="None" />
         </rule>
-        <!--<rule name="Preserve1" stopProcessing="true">
-          <match url="code/newea.aspx" />
+        <!-- index html --> 
+        <rule name="Index" stopProcessing="true">
+          <!--<match url="^(schools/index-(^[.]*)\.html)$" />-->
+          <match url="^schools/index-([^.]*)\.html$" />  
+          <action type="Rewrite" url="schools/index.cshtml?lang={R:1}" redirectType="Permanent" />
         </rule>
-        <rule name="Preserve2" stopProcessing="true">
-          <match url="links.aspx" />
-        </rule>-->
-        <!--<rule name="Preserve3" stopProcessing="true">   
-          <match url="vyzva57services(.*)" />
-          <action type="None" />
-        </rule>-->
-        <!--<rule name="Preserve4" stopProcessing="true"> 
-          <match url="service.ashx" />
-          <action type="None" />
-        </rule>-->
-        <!--<rule name="RedirectJS" stopProcessing="true">
-          <match url="(.js)$" />
-          <action type="Redirect" url="http://localhost/web4/{R:1}" />
-        </rule>-->
+        <!-- lm, skrivanek, edusoft, grafia redirect  -->
+        <!-- TODO (jinak se uklada na server do cache) -->
+        
+        <!-- html and js rewrite  -->
         <rule name="RedirectJS" stopProcessing="true">
-          <match url="^(.*\.js)$" />
-          <action type="Rewrite" url="http://localhost/web4/{R:1}" redirectType="Permanent" />
+          <match url="^(.*\.(js|html))$" />
+          <action type="Rewrite" url="http://localhost/web4/{R:1}" redirectType="Permanent" /> 
         </rule>
+        <!-- else redirect  -->
         <rule name="RedirectAll" stopProcessing="true">
           <match url="^(.*)$" />
           <action type="Redirect" url="http://localhost/web4/{R:1}" />
@@ -48,18 +42,15 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+      
+      <!--<dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
-      </dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>-->
     </assemblyBinding>
   </runtime>
 </configuration>
