--- a/WebCode/packages.config
+++ b/WebCode/packages.config
@@ -5,10 +5,12 @@
   <package id="EntityFramework.Sqlite" version="7.0.0-beta8" targetFramework="net46" />
   <package id="EntityFramework.SqlServer" version="7.0.0-beta8" targetFramework="net46" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Data.Sqlite" version="1.0.0-beta8" targetFramework="net46" />
   <package id="Microsoft.Framework.Caching.Abstractions" version="1.0.0-beta8" targetFramework="net46" />
@@ -23,6 +25,7 @@
   <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta8" targetFramework="net46" />
   <package id="Microsoft.Framework.Primitives" version="1.0.0-beta8" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Remotion.Linq" version="2.0.0-beta-002" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" />
