--- a/Web4/Web.config
+++ b/Web4/Web.config
@@ -14,7 +14,6 @@
     <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
     <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
   </sectionGroup>-->
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
@@ -134,6 +133,7 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <!--<devExpress>
     <themes enableThemesAssembly="true" styleSheetTheme="" theme="" customThemeAssemblies="" />
@@ -196,6 +196,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.data>
-  </system.data>
+  <system.data></system.data>
 </configuration>
