--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -571,6 +571,7 @@
     <Content Include="Deploy\typescript.cmd" />
     <Content Include="Deploy\jsDeploy.json" />
     <Content Include="Deploy\Azure.cmd" />
+    <Content Include="Deploy\vhd.cmd" />
     <None Include="JsLib\css\Author.less" />
     <Content Include="JsLib\css\img\flag-mid.png" />
     <Content Include="JsLib\css\img\flag-small.png" />
