WebCode index.aspx

--- a/WebCode/WebCode.csproj
+++ b/WebCode/WebCode.csproj
@@ -187,6 +187,7 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="links.html" />
+    <Content Include="schools\index.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -197,6 +198,13 @@
       <DependentUpon>mp3Uploader.ashx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="schools\index.aspx.cs">
+      <DependentUpon>index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="schools\index.aspx.designer.cs">
+      <DependentUpon>index.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
