--- a/WebCode/Web.config
+++ b/WebCode/Web.config
@@ -10,7 +10,7 @@
     <rewrite>
       <rules>
         <!-- stranky na WebCode serveru -->
-        <rule name="Preserve" stopProcessing="true"> 
+        <rule name="Preserve" stopProcessing="true">  
           <match url="^(code/newea\.aspx|links\.aspx|vyzva57services/(.*)|service\.ashx|mp3Uploader\.ashx|.*\.cshtml|links\.html)$" />
           <action type="None" />
         </rule>
@@ -18,7 +18,7 @@
         <rule name="Index" stopProcessing="true">
           <!--<match url="^(schools/index-(^[.]*)\.html)$" />-->
           <match url="^schools/index-([^.]*)\.html$" />  
-          <action type="Rewrite" url="schools/index.cshtml?lang={R:1}" redirectType="Permanent" />
+          <action type="Rewrite" url="schools/index.aspx?lang={R:1}" redirectType="Permanent" />
         </rule>
         <!-- lm, skrivanek, edusoft, grafia redirect  -->
         <!-- TODO (jinak se uklada na server do cache) -->
