Cache index.html

--- a/WebCode/Web.AppSetting.config
+++ b/WebCode/Web.AppSetting.config
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
 <appSettings>
+  <add key="cfg-isDebug" value="xtrue" />
+  
   <add key="Container-sqlite" value="NewLMCom_sqlite.s3db" />
   <add key="Container-sqlite" value="Vyzva57_sqlite.s3db" />
   <!--<add key="DataSourcePath" value="q:\LMCom\" />-->
