--- a/WebCode/Web.config
+++ b/WebCode/Web.config
@@ -1,32 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8"?> 
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings configSource="Web.AppSetting.config" />     
-  <connectionStrings configSource="Web.ConnectionStrings.config" /> 
+  <appSettings configSource="Web.AppSetting.config" />
+  <connectionStrings configSource="Web.ConnectionStrings.config" />
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
-  <system.webServer>
+  <system.webServer>  
     <rewrite>
       <rules>
         <!-- stranky na WebCode serveru -->
-        <rule name="Preserve" stopProcessing="true">   
+        <rule name="Preserve" stopProcessing="true">
           <match url="^(code/newea\.aspx|links\.aspx|vyzva57services/(.*)|service\.ashx|mp3Uploader\.ashx|.*\.cshtml|links\.html)$" />
           <action type="None" />
         </rule>
-        <!-- index html --> 
+        <!-- index html -->
         <rule name="Index" stopProcessing="true">
           <!--<match url="^(schools/index-(^[.]*)\.html)$" />-->
-          <match url="^schools/index-([^.]*)\.html$" />  
-          <action type="Rewrite" url="schools/index.aspx?lang={R:1}" redirectType="Permanent" />
+          <match url="^schools/index-([^.]*)\.html$" />
+          <conditions>
+            <add input="{HTTP_ACCEPT_ENCODING}" pattern="(gzip|)" />
+          </conditions>
+          <action type="Rewrite" url="schools/index.aspx?lang={R:1}&amp;encoding={C:0}" redirectType="Permanent" />
         </rule>
         <!-- lm, skrivanek, edusoft, grafia redirect  -->
         <!-- TODO (jinak se uklada na server do cache) -->
-        
+
         <!-- html and js rewrite  -->
         <rule name="RedirectJS" stopProcessing="true">
           <match url="^(.*\.(js|html))$" />
-          <action type="Rewrite" url="http://localhost/web4/{R:1}" redirectType="Permanent" /> 
+          <action type="Rewrite" url="http://localhost/web4/{R:1}" redirectType="Permanent" />
         </rule>
         <!-- else redirect  -->
         <rule name="RedirectAll" stopProcessing="true">
@@ -42,7 +45,7 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
-      
+
       <!--<dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
