--- a/NewLMComModel/packages.config
+++ b/NewLMComModel/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BoneSoft.CSS" version="1.0.0" targetFramework="net45" />
   <package id="ClearScript.V8" version="5.4.2.1" targetFramework="net45" />
+  <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net46" />
   <package id="EntityFramework.Commands" version="7.0.0-beta8" targetFramework="net45" />
   <package id="EntityFramework.Core" version="7.0.0-beta8" targetFramework="net45" />
   <package id="EntityFramework.Relational" version="7.0.0-beta8" targetFramework="net45" />
