--- a/NewLMComModel/packages.config
+++ b/NewLMComModel/packages.config
@@ -52,4 +52,5 @@
   <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" />
+  <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net46" />
 </packages>
