--- a/NewLMComModel/NewLMComModel.csproj
+++ b/NewLMComModel/NewLMComModel.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NewData</RootNamespace>
     <AssemblyName>NewLMComModel</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <IsCompassProject>True</IsCompassProject>
@@ -240,6 +240,7 @@
   <ItemGroup>
     <Compile Include="DesignNew\DeployConsts.cs" />
     <Compile Include="DesignNew\Deploy.cs" />
+    <Compile Include="DesignNew\SynchronizeDirs.cs" />
     <Compile Include="DesignNew\UrlRewrite.cs" />
     <Compile Include="Design\jsWebApiProxy\WebApiProxyTempl.cs">
       <DependentUpon>WebApiProxyTempl.tt</DependentUpon>
