--- a/NewLMComModel/packages.config
+++ b/NewLMComModel/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.1.0-beta1-20150928-02" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.0-beta1-20150928-02" targetFramework="net45" />
@@ -51,6 +52,6 @@
   <package id="System.Text.Encoding" version="4.0.0" targetFramework="net45" />
   <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="6.0.0" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net46" />
 </packages>
