oprava chinh skin - chybejici chinh CSS v github

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,9 @@ Web4/Data/buildLogs/
 Web4/Data/instr/
 Web4/Data/XmlSource/
 ndependout/
+
+!Web4/blendedapi/styles/style.css 
+!Web4/jslib/css/lm.css 
+!Web4/JsLib/skins/chinh/css.css
+!Web4/JsLib/skins/skrivanek/css.css
+!Web4/JsLib/skins/grafia/css.css
