--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,7 @@ web4/data/productscurrent.xml
 web4/data/productsexpanded.xml
 web4/data/actproductsexpanded.xml
 web4/data/productsitemap.xml
+Web4/Deploy/envelopes.xml
 lmcom/
 
 web4/siteroot.js
