--- a/NewLMComModel/NewLMComModel.csproj
+++ b/NewLMComModel/NewLMComModel.csproj
@@ -245,7 +245,7 @@
     <Compile Include="DesignNew\DeployConsts.cs" />
     <Compile Include="DesignNew\Deploy.cs" />
     <Compile Include="DesignNew\SynchronizeDirs.cs" />
-    <Compile Include="DesignNew\UrlRewrite.cs" />
+    <Compile Include="DesignNew\Handler.cs" />
     <Compile Include="Design\jsWebApiProxy\WebApiProxyTempl.cs">
       <DependentUpon>WebApiProxyTempl.tt</DependentUpon>
       <AutoGen>True</AutoGen>
