--- a/Web4/packages.config
+++ b/Web4/packages.config
@@ -6,9 +6,12 @@
   <package id="EntityFramework.Relational.Design" version="7.0.0-beta8" targetFramework="net46" />
   <package id="EntityFramework.SqlServer" version="7.0.0-beta8" targetFramework="net46" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="4.0.0-beta8" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net46" />
