--- a/WebCode/Web.AppSetting.config
+++ b/WebCode/Web.AppSetting.config
@@ -1,11 +1,7 @@
 <?xml version="1.0"?>
 <appSettings>
-  <add key="cfg-isDebug" value="xtrue" />
+  <add key="cfg-isDebug" value="true" />
   <add key="cfg-designId" value="xskrivanek" />
-  
-  <add key="Container-sqlite" value="NewLMCom_sqlite.s3db" />
-  <add key="Container-sqlite" value="Vyzva57_sqlite.s3db" />
-  <!--<add key="DataSourcePath" value="q:\LMCom\" />-->
   
   <!--PDF certifikat pro eTestMe-->
   <add key="PDF.Cert.Password" value="xcv456dfg258_" />
