Load JS files form blobs (CORS)

--- a/WebCode/Web.AppSetting.config
+++ b/WebCode/Web.AppSetting.config
@@ -2,6 +2,7 @@
 <appSettings>
   <add key="cfg-isDebug" value="true" />
   <add key="cfg-designId" value="xskrivanek" />
+  <add key="cfg-blobUrl" value="https://lmdata.blob.core.windows.net/v1-0" />
   
   <!--PDF certifikat pro eTestMe-->
   <add key="PDF.Cert.Password" value="xcv456dfg258_" />
