--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -19,8 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
-    <SilverlightApplicationList>
-    </SilverlightApplicationList>
+    <SilverlightApplicationList>{0AAE90F3-14E7-4DD8-8FCE-55AF88DC6698}|..\SLExtension\SLExtension.csproj|schools|False</SilverlightApplicationList>
     <TypeScriptSourceMap>False</TypeScriptSourceMap>
     <TypeScriptModuleKind>none</TypeScriptModuleKind>
     <TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
@@ -318,6 +317,8 @@
     <Content Include="AuthorWeb\trash\jquery-ui\jquery-ui.structure.css" />
     <Content Include="AuthorWeb\trash\jquery-ui\jquery-ui.theme.css" />
     <Content Include="Author\Author.html" />
+    <Content Include="bin\libmp3lame.dll" />
+    <Content Include="bin\sqlite3.dll" />
     <Content Include="Deploy\cs-cz.min.js" />
     <Content Include="Deploy\en-gb.min.js" />
     <Content Include="Deploy\externals.min.js" />
@@ -2776,7 +2777,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BS3\css\" />
-    <Folder Include="ClientBin\" />
     <Folder Include="JsLib\css\img\Reports\" />
     <Folder Include="Schools\EAData\" />
     <Folder Include="Temp\Sql\" />
