--- a/WebCode/Web.config
+++ b/WebCode/Web.config
@@ -5,6 +5,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+    <customErrors mode="Off"/>
     <!--<httpModules>
       <add name="UrlRewrite" type="WebCode.UrlRewrite, NewLMComModel"/> 
     </httpModules>-->
@@ -16,9 +17,9 @@
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
+      <dependentAssembly> 
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" /> 
       </dependentAssembly>
 
     </assemblyBinding>
