osetrneni prazdne URL se strankou, index-*.html s isDebug a designId parametrem

--- a/WebCode/Web.AppSetting.config
+++ b/WebCode/Web.AppSetting.config
@@ -1,10 +1,15 @@
 <?xml version="1.0"?>
 <appSettings>
-  <add key="cfg-isDebug" value="true" />
+  <add key="cfg-isDebug" value="xtrue" />
   <add key="cfg-designId" value="xskrivanek" />
   <add key="cfg-blobJS" value="http://lmdata.blob.core.windows.net/v1-0" />
   <add key="cfg-blobMM" value="http://lmdata.blob.core.windows.net/v1-0" />
-  
+  <!--
+  <add key="cfg-blobJS" value="http://lmdata.blob.core.windows.net/v1-0" /><add key="cfg-blobMM" value="http://lmdata.blob.core.windows.net/v1-0" />
+  <add key="cfg-blobJS" value="http://localhost/Web4" /><add key="cfg-blobMM" value="http://localhost/Web4" />
+  -->
+
+
   <!--PDF certifikat pro eTestMe-->
   <add key="PDF.Cert.Password" value="xcv456dfg258_" />
   <add key="PDF.Cert"         value="{0}App_Data\testMe\langmaster_pdf.pfx" />
