--- a/WebCode/Web.AppSetting.config
+++ b/WebCode/Web.AppSetting.config
@@ -2,8 +2,8 @@
 <appSettings>
   <add key="cfg-isDebug" value="xtrue" />
   <add key="cfg-designId" value="xskrivanek" />
-  <add key="cfg-blobJS" value="http://lmdata.blob.core.windows.net/v1-0" />
-  <add key="cfg-blobMM" value="http://lmdata.blob.core.windows.net/v1-0" />
+  <add key="cfg-blobJS" value="http://lmdata.blob.core.windows.net/js-v001" />
+  <add key="cfg-blobMM" value="http://lmdata.blob.core.windows.net/mm-v001" />
   <!--
   <add key="cfg-blobJS" value="http://lmdata.blob.core.windows.net/v1-0" /><add key="cfg-blobMM" value="http://lmdata.blob.core.windows.net/v1-0" />
   <add key="cfg-blobJS" value="http://localhost/Web4" /><add key="cfg-blobMM" value="http://localhost/Web4" />
